test/corpus/blocks.txt
================================================================================
definition
================================================================================

definition {
}

--------------------------------------------------------------------------------

(source_file
  (body
    (block
      (identifier)
      (block_start)
      (block_end))))

================================================================================
definition on one line
================================================================================

definition {}

--------------------------------------------------------------------------------

(source_file
  (body
    (block
      (identifier)
      (block_start)
      (block_end))))

================================================================================
definition with object
================================================================================

definition hello {
}

--------------------------------------------------------------------------------

(source_file
  (body
    (block
      (identifier)
      (identifier)
      (block_start)
      (block_end))))


================================================================================
definition with fullpath
================================================================================

definition flowcode/code {
}

--------------------------------------------------------------------------------

(source_file
     (body
       (block
         (identifier)
         (identifier)
         (block_start)
         (block_end))))
