test/corpus/relations.txt

================================================================================
relation
================================================================================
relation member: dev_flowcode/organziation
--------------------------------------------------------------------------------

(source_file
  (body
  (relation
    (relation_literal)
    (identifier)
    (perm_expression
      (identifier)))))

================================================================================
relation with extra
================================================================================
relation member: dev_flowcode/organziation | dev_flowcode/codes
--------------------------------------------------------------------------------

(source_file
  (body
  (relation
    (relation_literal)
    (identifier)
    (perm_expression
       (identifier)
       (pipe_literal)
      (identifier)))))
